# 2d-lighting

./: .gitignore  CMakeLists.txt  README.md  index.html  test.c
assets/shaders/: bloom_downsample.frag.glsl  bloom_upsample.frag.glsl  color_correction.frag.glsl  frag.glsl  light.frag.glsl  obj.frag.glsl  screen.frag.glsl  screen_quad.frag.glsl  screen_quad.vert.glsl  vert.glsl
include/: core.h  program.h  render_api.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h  gles2.h
page/: program.js  program.wasm  script.js  style.css
src/: app.c  core.c  desktop.c  main.c  render_api.c  web.c
